fixed white space issue

--- a/client/src/assets/css/App.css
+++ b/client/src/assets/css/App.css
@@ -30,8 +30,6 @@ Woman: Photo by Pixabay: https://www.pexels.com/photo/woman-holding-exercise-equ
 }
 
 body {
-  height: 100vh;
-  width: 100vw;
   margin: 0;
   padding: 0;
 }
