--- a/client/src/assets/css/Home.css
+++ b/client/src/assets/css/Home.css
@@ -1,10 +1,12 @@
 .video-container {
-width: 100vw;
-height: 100vh;
+    margin: 0;
+    display: flex;
+    align-items: center;
+    height: 93vh;
 }
 
 video {
-    height: 100vh;
-    width: 100vw;
+    height: 100%;
+    width: 100%;
     object-fit: cover;
 }
